2003-01-09  Steve Langasek  <vorlon@debian.org>
	* AUTHORS, client/Makefile.am, client/gui.c, po/gnocatan.pot,
	  po/de.po: bring the AUTHORS file up-to-date, and autogenerate
	  the about box list from this file.	  

	* client/Makefile.am: s/pixmap_DATA/image_DATA/, to please
	  automake.

2003-01-08  Steve Langasek  <vorlon@debian.org>

	* client/theme.c: use a more portable variadic macro
	  syntax, to address OS X concerns

	* server/gnocatan-server.desktop, server/Makefile.am: add a
	  GNOME desktop entry for the GTK server, so it's easier to
	  start from the menu.

	* ai/Makefile.am, client/Makefile.am, common/gnocatan-path.h.in,
	  server/Makefile.am, debian/dirs, debian/gnocatan-ai.files,
	  debian/gnocatan-server-data.files, debian/rules, gnocatan.spec,
	  server/gnocatan-server.c: move /usr/share/gnocatan to
	  /usr/share/games/gnocatan, per the FHS; move
	  things-that-are-not-pixmaps out of /usr/share/pixmaps.

2003-01-01  Jeff Breidenbach  <jab@debian.org>

	* debian/gnocatan-meta-server.init: privilige reduction

	* debian/control: adjust dependencies, add co-maintainers.

	* debian/changelong: prepare for upload to Debian

2002-12-25  Roman Hodek  <roman@hodek.net>

	* configure.in: Some changes to make it work with autoconf2.50 and
	automake-1.7.
	Set version to 0.7.1.90 [internal snapshot]

	* depcomp, po/ChangeLog: new

	* acconfig.h: removed obsolete file

	* Makefile.am (distclean-local): remove some more stuff

	* gnocatan.spec: applied patch by Brian Wellington

	* client/player.c (player_has_quit): remove player also from
	internal list for a more meaningful message on reconnection.

	* server/player.c, server/pregame.c, server/server.h: remove
	redundant is_game_full variable and replace by
	game->num_players == game->params->num_players
	
	* server/player.c (player_revive): send an explicit note to
	players that a reconnection has happened

	* server/player.c (player_set_name): explicitly tell if name was