@@ -1,4 +1,4 @@
-SUBDIRS = po intl macros common client server meta-server ai
+SUBDIRS = po intl macros common client server meta-server ai docs
 
 ## to automatically rebuild aclocal.m4 if any of the macros in
 ## `macros/' change
