@@ -1,1 +1,2 @@
 usr/games/gnocatan-server-console
+usr/share/man/man6/gnocatan-server-console.6
