@@ -1,2 +1,3 @@
 usr/games/gnocatan-server-gtk
 usr/share/gnome/apps/Games/gnocatan-server.desktop
+usr/share/man/man6/gnocatan-server-gtk.6
