@@ -1,0 +1,4 @@
+man_MANS = gnocatan.6
+
+EXTRA_DIST = \
+	$(man_MANS)
