@@ -1,0 +1,33 @@
+.TH Gnocatan-server-gtk 6 "January 10, 2003" "gnocatan"
+.SH NAME
+Gnocatan-server-gtk \- graphical game server for Settlers of Catan
+
+.SH SYNOPSIS
+.B gnocatan-server-gtk
+.RI [ options ]
+
+.SH DESCRIPTION
+This manual page documents briefly the
+.B gnocatan-server-gtk
+command.
+.PP
+.B Gnocatan
+is an implementation of the popular, award-winning "Settlers of Catan"
+board game for the GNOME desktop environment.  It uses a client/server
+model for networked play of between two and eight players.  This program
+provides a GUI-configurable stand-alone server which you connect to
+from \fBgnocatan\fP itself.
+
+.SH OPTIONS
+Gnocatan accepts the standard GTK+/GNOME commandline options.
+
+.SH AUTHOR
+This manual page was written by Steve Langasek <vorlon@debian.org>.
+Gnocatan was written by Dave Cole <dave@dccs.com.au>, Andy Heroff
+<aheroff@mediaone.net>, and Roman Hodek <roman@hodek.net>, with
+contributions from many other developers on the Internet; see the
+AUTHORS file in the gnocatan distribution for a complete list of
+contributing authors.
+
+.SH SEE ALSO
+.BR gnocatan(6) ", " gnocatan-server-console(6) ", " gnocatan-ai(6)
