@@ -1,0 +1,35 @@
+.TH Gnocatan 6 "January 9, 2003" "gnocatan"
+.SH NAME
+Gnocatan \- network implementation of Settlers of Catan
+
+.SH SYNOPSIS
+.B gnocatan
+.RI [ options ]
+
+.SH DESCRIPTION
+This manual page documents briefly the
+.B gnocatan
+command.
+.PP
+.B Gnocatan
+is an implementation of the popular, award-winning "Settlers of Catan"
+board game for the GNOME desktop environment.  It uses a client/server
+model for networked play of between two and eight players.  You will
+need to connect to a machine running either \fBgnocatan-server-gtk\fP
+or \fBgnocatan-server-console\fP to play.  An AI client, \fBgnocatan-ai\fP,
+is also available.
+
+.SH OPTIONS
+Gnocatan accepts the standard GTK+/GNOME commandline options.
+
+.SH AUTHOR
+This manual page was written by Steve Langasek <vorlon@debian.org>.
+Gnocatan was written by Dave Cole <dave@dccs.com.au>, Andy Heroff
+<aheroff@mediaone.net>, and Roman Hodek <roman@hodek.net>, with
+contributions from many other developers on the Internet; see the
+AUTHORS file in the gnocatan distribution for a complete list of
+contributing authors.
+
+.SH SEE ALSO
+.BR gnocatan-server-gtk(6) ", " gnocatan-server-console(6) ", "
+.B gnocatan-ai(6)
